--- a/doogledoor/static/package.json
+++ b/doogledoor/static/package.json
@@ -11,6 +11,7 @@
   "author": "Jared Sulzdorf",
   "license": "ISC",
   "devDependencies": {
+    "@types/bootstrap": "^5.2.10",
     "@types/react": "^18.2.52",
     "@types/react-dom": "^18.2.18",
     "@types/recharts": "^1.8.29",
@@ -20,6 +21,7 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "^2.11.0"
