--- a/requirements.txt
+++ b/requirements.txt
@@ -22,18 +22,22 @@ itsdangerous==2.1.2 ; python_version >= "3.10" and python_version < "3.12"
 jinja2==3.1.3 ; python_version >= "3.10" and python_version < "3.12"
 markupsafe==2.1.5 ; python_version >= "3.10" and python_version < "3.12"
 multidict==6.0.5 ; python_version >= "3.10" and python_version < "3.12"
+numpy==1.26.4 ; python_version >= "3.10" and python_version <= "3.11"
 packaging==23.2 ; python_version >= "3.10" and python_version < "3.12"
+pandas==2.2.0 ; python_version >= "3.10" and python_version < "3.12"
 pg8000==1.30.4 ; python_version >= "3.10" and python_version < "3.12"
 pyasn1-modules==0.3.0 ; python_version >= "3.10" and python_version < "3.12"
 pyasn1==0.5.1 ; python_version >= "3.10" and python_version < "3.12"
 pycparser==2.21 ; python_version >= "3.10" and python_version < "3.12" and platform_python_implementation != "PyPy"
 python-dateutil==2.8.2 ; python_version >= "3.10" and python_version < "3.12"
+pytz==2024.1 ; python_version >= "3.10" and python_version < "3.12"
 requests==2.31.0 ; python_version >= "3.10" and python_version < "3.12"
 rsa==4.9 ; python_version >= "3.10" and python_version < "3.12"
 scramp==1.4.4 ; python_version >= "3.10" and python_version < "3.12"
 six==1.16.0 ; python_version >= "3.10" and python_version < "3.12"
 sqlalchemy==2.0.25 ; python_version >= "3.10" and python_version < "3.12"
 typing-extensions==4.9.0 ; python_version >= "3.10" and python_version < "3.12"
+tzdata==2023.4 ; python_version >= "3.10" and python_version < "3.12"
 urllib3==2.2.0 ; python_version >= "3.10" and python_version < "3.12"
 werkzeug==3.0.1 ; python_version >= "3.10" and python_version < "3.12"
 yarl==1.9.4 ; python_version >= "3.10" and python_version < "3.12"
